--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,15 +1,15 @@
----
+
 - name: "upgrade packages."
   become: true
   apt:
     upgrade: "yes"
 
-- name: "install python for Ansible."
+- name: "install python to be used by ansible."
   become: true
   raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
   changed_when: false
 
-- name: "install dependencies."
+- name: "install dependencies"
   become: true
   apt:
     name: ["nodejs", "npm"]
