--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
-        
+
   test-backend:
     docker:
       - image: cimg/node:13.8.0
@@ -111,7 +111,7 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
-            
+
   scan-frontend:
     docker:
       - image: cimg/node:13.8.0
@@ -126,9 +126,9 @@ jobs:
             npm install
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
-      - save_cache:
-          paths: [frontend/node_modules]
-          key: frontend-build
+      # - save_cache:
+      #     paths: [frontend/node_modules]
+      #     key: frontend-build
 
   scan-backend:
     docker:
@@ -145,9 +145,9 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit fix --force
             npm audit --audit-level=critical
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-build
+      # - save_cache:
+      #     paths: [backend/node_modules]
+      #     key: backend-build
 
   deploy-infrastructure:
     docker:
