project section 3, phase 2a

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -354,8 +354,8 @@ workflows:
               only: [3-project]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires: [configure-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
       # - deploy-backend:
