project section 3, phase 2a fix

--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -13,7 +13,7 @@ Parameters:
 
   ImageId:
     Type: String
-    Description: 'Linux 2 AMI for Ireland eu-west1 Region'
+    Description: Ubuntu AMI for North Virginia eu-east-1 region
     Default: ami-052efd3df9dad4825
 
   KeyPair:
@@ -25,7 +25,7 @@ Resources:
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: !Sub UdaPeople-${ID}
+      GroupName: !Sub bams-${ID}
       GroupDescription: Allow port 22 and port 3030.
       VpcId: 
         Ref: VPC
@@ -52,8 +52,13 @@ Resources:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: t2.micro
-      SecurityGroups:
-        - Ref: InstanceSecurityGroup
+      # SecurityGroups:
+      #   - Ref: InstanceSecurityGroup
+      NetworkInterfaces:
+        - AssociatePublicIpAddress: "true"
+          DeviceIndex: "0"
+          GroupSet: 
+            - Ref: InstanceSecurityGroup
       KeyName: !Ref KeyPair
       ImageId: !Ref ImageId
       Tags:
@@ -64,6 +69,7 @@ Resources:
   # https://github.com/awslabs/aws-cloudformation-templates/blob/master/aws/services/EC2/EIP_With_Association.yaml
   IPAddress:
     Type: AWS::EC2::EIP
+  
   IPAssoc:
     Type: AWS::EC2::EIPAssociation
     Properties:
