--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -228,6 +228,7 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
+            no_output_timeout: 30m
       - run:
           name: Send migration results to kvdb
           command: |
