--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -21,44 +21,18 @@ Parameters:
     Type: AWS::EC2::KeyPair::KeyName
     Default: bams
 
-Resources:
-  InstanceSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupName: !Sub bams-${ID}
-      GroupDescription: Allow port 22 and port 3030.
-      VpcId: 
-        Ref: VPC
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 3030
-          ToPort: 3030
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 5432
-          ToPort: 5432
-          CidrIp: 0.0.0.0/0
-      SecurityGroupEgress:
-        - IpProtocol: -1
-          FromPort: -1
-          ToPort: -1
-          CidrIp: 0.0.0.0/0 
+  SG:
+    Description: EC2 security group
+    Type: AWS::EC2::SecurityGroup::Id
+    Default: sg-083b50aca0ae26bc2
 
+Resources:
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: t2.micro
-      # SecurityGroups:
-      #   - Ref: InstanceSecurityGroup
-      NetworkInterfaces:
-        - AssociatePublicIpAddress: "true"
-          DeviceIndex: "0"
-          GroupSet: 
-            - Ref: InstanceSecurityGroup
+      SecurityGroupIds:
+        - Ref: SG
       KeyName: !Ref KeyPair
       ImageId: !Ref ImageId
       Tags:
