project section 3, phase 2b fix

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,8 @@ commands:
               cd backend
               npm install
               npm run migrations:revert
+            else
+              return 0
             fi
      
 jobs:
@@ -210,7 +212,7 @@ jobs:
 
   run-migrations:
     docker: 
-      - image: cimg/node:18.4.0
+      - image: cimg/node:13.8.0
     steps:
       - checkout
       - restore_cache:
@@ -226,6 +228,9 @@ jobs:
           name: Run migrations
           command: |
             cd backend
+            npm cache clean --force
+            rm -rf node_modules
+            rm -rf package-lock.json
             npm install
             npm audit fix --audit-level=critical --force
             npm audit fix --force
