project section 3, phase 2b fix

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -228,16 +228,17 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
             cd ..
       - run:
           name: Send migration results to kvdb
           command: |
-            ls
+            ls backend/migrations_dump.txt
             if grep -q "has been executed successfully." backend/migrations_dump.txt
             then
                 curl https://kvdb.io/Hhn4mXEkfUaa9rwxwvv2RJ/migration_${CIRCLE_WORKFLOW_ID:0:8}  -d '1'
             else
-              return 1
+              exit 1
             fi
       - destroy_infra:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
