--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -299,17 +299,15 @@ jobs:
           command: |
             apk add --update ansible
             apk add --update openssh
-            apk add --update tar
-            apk add --update gzip
-            apk add --update curl
+            apk add --update tar gzip curl
+            /usr/local/bin/python -m pip install --upgrade pip
             pip3 install awscli
       - run:
           name: Install nodejs
           command: |
             # https://github.com/nvm-sh/nvm/issues/1102#issuecomment-591560924
-            id
-            touch $HOME/.profile
-            apk add --no-cache libstdc++; \
+            ls -la $HOME
+            apk add --no-cache libstdc++
             curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.1/install.sh | sh; \
             echo 'source $HOME/.profile;' >> $HOME/.zshrc; \
             echo 'export NVM_NODEJS_ORG_MIRROR=https://unofficial-builds.nodejs.org/download/release;' >> $HOME/.profile; \
