--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -300,10 +300,10 @@ jobs:
             sudo su
             apt-get update && apt-get -y upgrade
             apt-get install -y ansible ssh
-            # curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            # unzip awscliv2.zip
-            # sudo ./aws/install -i /usr/local/aws-cli -b /usr/local/bin
-            # aws --version
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install -i /usr/local/aws-cli -b /usr/local/bin
+            aws --version
       - run:
           name: Deploy backend
           command: |
