--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,9 +140,6 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit fix --force
             npm audit --audit-level=critical
-      # - save_cache:
-      #     paths: [backend/node_modules]
-      #     key: backend-build
 
   deploy-infrastructure:
     docker:
@@ -254,6 +251,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            apt-get update && apt-get -y upgrade
             apt-get install -y ansible ssh tar gzip curl
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
@@ -303,6 +301,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            apt-get update && apt-get -y upgrade
             apt-get install -y ansible ssh tar gzip curl
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
