--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -334,13 +334,14 @@ jobs:
 
   smoke-test:
     docker: 
-      - image: cimg/deploy:2022.6.1
+      - image: amazon/aws-cli
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: |
-            # your code here
+            aws --version
+            yum install -y curl tar gzip
       - run:
           name: Get backend url
           command: |
