--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -342,6 +342,11 @@ jobs:
           command: |
             aws --version
             yum install -y curl tar gzip
+            yum install -y gcc-c++ make
+      - run:
+          name: Install nodejs 13.x
+          command: |
+            curl -fsSL https://rpm.nodesource.com/setup_13.x | bash -
       - run:
           name: Get backend url
           command: |
@@ -382,12 +387,27 @@ jobs:
   #     - run:
   #         name: Install dependencies
   #         command: |
-  #           # your code here
+  #           aws --version
+  #           yum install -y curl tar gzip
+  #           yum install -y gcc-c++ make
+  #     - run:
+  #         name: Install nodejs 13.x
+  #         command: |
+  #           curl -fsSL https://rpm.nodesource.com/setup_13.x | bash -
   #     - run:
   #         name: Update cloudfront distribution
   #         command: |
-  #           # your code here
-  #     - destroy_infra
+  #           # Change the initial stack name, as applicable to you
+  #           aws cloudformation deploy \
+  #             --template-file .circleci/files/cloudfront.yml \
+  #             --stack-name InitialStack \
+  #             --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:8}" \
+  #             --tags project=udapeople \
+  #             --region=us-east-1 \
+  #     - destroy_infra:
+  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
+  #     - revert_migrations:
+  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
 
   # cleanup:
   #   docker:
