--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -347,6 +347,7 @@ jobs:
           name: Install nodejs 13.x
           command: |
             curl -fsSL https://rpm.nodesource.com/setup_13.x | bash -
+            yum install -y nodejs
       - run:
           name: Get backend url
           command: |
@@ -396,6 +397,7 @@ jobs:
   #         name: Install nodejs 13.x
   #         command: |
   #           curl -fsSL https://rpm.nodesource.com/setup_13.x | bash -
+  #           yum install -y nodejs
   #     - run:
   #         name: Update cloudfront distribution
   #         command: |
@@ -425,7 +427,8 @@ jobs:
   #     - run:
   #         name: Install nodejs 13.x
   #         command: |
-  #           curl -fsSL https://rpm.nodesource.com/setup_13.x | bash -  
+  #           curl -fsSL https://rpm.nodesource.com/setup_13.x | bash -
+  #           yum install -y nodejs
   #     - run:
   #         name: Get old stack workflow id
   #         command: |
