project section 3, phase 3 smoke test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -349,17 +349,14 @@ jobs:
             curl -fsSL https://rpm.nodesource.com/setup_13.x | bash -
             yum install -y nodejs
       - run:
-          name: Get backend url
+          name: Backend smoke test.
           command: |
             # Fetch and prepare the BACKEND_IP env var
             export BACKEND_IP=$(aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             export API_URL="http://${BACKEND_IP}:3030"
-            echo "${API_URL}"
-      - run:
-          name: Backend smoke test.
-          command: |
-            if curl "${API_URL}/api/status" | grep "ok"
+            echo $API_URL
+            if curl -s $API_URL/api/status" | grep "ok"
             then
                 exit 0
             else
