--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -356,7 +356,7 @@ jobs:
             --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo $API_URL
-            if curl -s $API_URL/api/status" | grep "ok"
+            if curl -s $API_URL/api/status | grep "ok"
             then
                 exit 0
             else
