--- a/.circleci/ansible/node-exporter.yml
+++ b/.circleci/ansible/node-exporter.yml
@@ -1,12 +1,12 @@
 ---
-
-- name: deploy backend playbook
+- name: 'configuration play.'
   hosts: web
   user: ubuntu
+  become: true
   gather_facts: false
   vars:
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
   roles:
-    - deploy
+    - configure-prometheus-node-exporter
