--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ commands:
             if [[ $SUCCESS == 1 ]];
             then
               cd backend
-              npm install
+              npm install > /dev/null
               npm run migrations:revert
             fi
      
@@ -51,8 +51,8 @@ jobs:
           name: Build front-end
           command: |
             cd frontend
-            npm install
-            npm run build
+            npm install > /dev/null
+            npm run build > /dev/null
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -68,8 +68,8 @@ jobs:
           name: Build backend
           command: |
             cd backend
-            npm install
-            npm run build
+            npm install > /dev/null
+            npm run build > /dev/null
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
@@ -85,7 +85,7 @@ jobs:
           name: Test frontend
           command: |
             cd frontend
-            npm install
+            npm install > /dev/null
             npm run test
       - save_cache:
           paths: [frontend/node_modules]
@@ -102,7 +102,7 @@ jobs:
           name: Build backend
           command: |
             cd backend
-            npm install
+            npm install > /dev/null
             npm run test
       - save_cache:
           paths: [backend/node_modules]
@@ -119,7 +119,7 @@ jobs:
           name: Scan frontend
           command: |
             cd frontend
-            npm install
+            npm install > /dev/null
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
       # - save_cache:
@@ -137,7 +137,7 @@ jobs:
           name: Scan backend
           command: |
             cd backend
-            npm install
+            npm install > /dev/null
             npm audit fix --audit-level=critical --force
             npm audit fix --force
             npm audit --audit-level=critical
@@ -153,7 +153,7 @@ jobs:
           name: Ensure backend infrastructure exists
           command: |
             aws cloudformation deploy \
-              --template-file .circleci/files/backend.yml \
+              --template-file .circleci/cloudformation/backend.yml \
               --tags project=bams \
               --stack-name bams-backend-${CIRCLE_WORKFLOW_ID:0:8} \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:8}" \
@@ -162,7 +162,7 @@ jobs:
           name: Ensure frontend infrastructure exist
           command: |
             aws cloudformation deploy \
-              --template-file .circleci/files/frontend.yml \
+              --template-file .circleci/cloudformation/frontend.yml \
               --tags project=bams \
               --stack-name bams-frontend-${CIRCLE_WORKFLOW_ID:0:8} \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:8}" \
@@ -172,12 +172,12 @@ jobs:
           command: |
             aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --output text >> .circleci/ansible/inventory.txt
-      - run: cat .circleci/ansible/inventory.txt
+            --output text >> .circleci/ansible/inventory
+      - run: cat .circleci/ansible/inventory
       - persist_to_workspace:
           root: .
           paths:
-            - .circleci/ansible/inventory.txt
+            - .circleci/ansible/inventory
       - destroy_infra:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
 
@@ -193,17 +193,13 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible
-            apk add --update openssh
-            apk add --update tar
-            apk add --update gzip
-            pip3 install awscli
+            apk add --update --no-cache tar gzip ansible openssh aws-cli
       - run:
           name: Configure server
           command: |
             cd .circleci/ansible
-            cat inventory.txt
-            ansible-playbook -i inventory.txt configure-server.yml
+            cat inventory
+            ansible-playbook -i inventory backend-server.yml
       - destroy_infra:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
 
@@ -225,7 +221,7 @@ jobs:
           name: Run migrations
           command: |
             cd backend
-            npm install
+            npm install > /dev/null
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
             cd ..
@@ -280,8 +276,8 @@ jobs:
           name: Deploy frontend objects
           command: |
             cd frontend
-            npm install
-            npm run build
+            npm install > /dev/null
+            npm run build > /dev/null
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:8}".tar.gz dist
             aws s3 cp dist/. s3://udapeople-${CIRCLE_WORKFLOW_ID:0:8} --recursive
             cd ..
@@ -317,16 +313,16 @@ jobs:
           name: Deploy backend
           command: |
             cd backend
-            npm i
-            npm run build > build_dump.txt
+            npm i > /dev/null
+            npm run build > /dev/null
             cd ..
             tar -C backend -czvf artifact.tar.gz . && ls -la
-            mkdir .circleci/ansible/roles/deploy/files
-            mv ./artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
-            ls .circleci/ansible/roles/deploy/files
+            mkdir .circleci/ansible/roles/backend-app/files
+            mv artifact.tar.gz .circleci/ansible/roles/backend-app/files/artifact.tar.gz
+            ls .circleci/ansible/roles/backend-app/files
             cd .circleci/ansible
-            cat inventory.txt
-            ansible-playbook -i inventory.txt deploy-backend.yml
+            cat inventory
+            ansible-playbook -i inventory backend-app.yml
       - destroy_infra:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
       - revert_migrations:
@@ -400,7 +396,7 @@ jobs:
   #         command: |
   #           # Change the initial stack name, as applicable to you
   #           aws cloudformation deploy \
-  #             --template-file .circleci/files/cloudfront.yml \
+  #             --template-file .circleci/cloudformation/cloudfront.yml \
   #             --stack-name InitialStack \
   #             --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:8}" \
   #             --tags project=bams \
