--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -193,7 +193,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update --no-cache tar gzip ansible openssh aws-cli
+            apk add --update --no-cache tar gzip ansible openssh awscli
       - run:
           name: Configure server
           command: |
