--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -324,7 +324,8 @@ jobs:
             ls .circleci/ansible/roles/backend-app/files
             cd .circleci/ansible
             cat inventory
-            ansible-playbook -i inventory backend-app.yml
+            ansible-playbook backend-app.yml --syntax-check
+            ansible-playbook -i inventory backend-app.yml -v
       - destroy_infra:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
       - revert_migrations:
