--- a/.circleci/ansible/roles/backend-app/tasks/main.yml
+++ b/.circleci/ansible/roles/backend-app/tasks/main.yml
@@ -24,9 +24,9 @@
 - name: Start backend app
   register: startBackend
   shell: |
-    cd ~/backend && ls
-    npm install > /dev/null
-    pm2 stop default
+    cd ~/backend
+    npm run migrations
+    pm2 delete all
     pm2 start npm -- start
 
 - name: check pm2 log
@@ -42,3 +42,12 @@
   debug:
     var: pm2
     verbosity: 2
+
+# - monitor pm2
+# pm2 monit
+# pm2 list
+# pm2 stop
+# pm2 restart
+# pm2 delete
+# https://pm2.keymetrics.io/
+# http://54.145.79.52:3030/api/status
