--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -375,8 +375,8 @@ jobs:
             else
               return 1
             fi
-      # - destroy_infra:
-      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
+      - destroy_infra:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
       - revert_migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
 
