project section 3, phase 3 smoke test fix

--- a/.circleci/ansible/roles/backend-app/tasks/main.yml
+++ b/.circleci/ansible/roles/backend-app/tasks/main.yml
@@ -25,7 +25,7 @@
   register: startBackend
   shell: |
     cd ~/backend
-    npm run migrations
+    #npm run migrations
     pm2 delete all
     pm2 start npm -- start
 
