--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,7 +183,7 @@ jobs:
 
   configure-infrastructure:
     docker: 
-      - image: python:3.10-alpine3.16 #python:3.7-alpine3.11
+      - image: python:3.7-alpine3.11 #python:3.10-alpine3.16
     steps:
       - checkout
       - add_ssh_keys:
@@ -201,7 +201,8 @@ jobs:
           command: |
             cd .circleci/ansible
             cat inventory
-            ansible-playbook -i inventory backend-server.yml
+            ansible --version
+            ansible-playbook -i inventory backend-server.yml -vv
       - destroy_infra:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:8}
 
